Thu May  1 08:37:49 2003  Chad Elliott  <elliott_c@ociweb.com>

        * orbsvcs/IFR_Service/IFR_Service.mpc:

          Added the NT_Service.cpp.

        * orbsvcs/IFR_Service/drv_preproc_ifr.cpp:
        * orbsvcs/IFR_Service/ifr_adding_visitor.cpp:
        * orbsvcs/IFR_Service/tao_ifr.cpp:
        * orbsvcs/ImplRepo_Service/ImR_Activator_i.cpp:
        * orbsvcs/ImplRepo_Service/tao_imr_i.cpp:

          Removed build warnings for Windows XP 64-bit.

        * orbsvcs/ImplRepo_Service/ImplRepo_Service.mpc:

          Added $(TAO_ROOT)/TAO_IDL to the libpaths.

Wed Apr 30 20:18:51 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tao/IORManipulation/IORC.cpp: Added explicit template
	  instantiations.

Wed Apr 30 17:13:43 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be_include/be_visitor_sequence/sequence_cs.h:
        * TAO_IDL/be/be_visitor_sequence/sequence_cs.cpp:

          Removed unused parameter in gen_base_class_tmplinst().

Wed Apr 30 16:31:43 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_visitor_array/array_ch.cpp:
        * TAO_IDL/be/be_visitor_array/array_cs.cpp:
        * TAO_IDL/be_include/be_visitor_array/array_cs.h:

          Fixed explicit template instatiation for arrays.

Wed Apr 30 14:59:07 2003  Jeff Parsons <j.parsons@vanderbilt.edu>

        * TAO_IDL/be/be_sequence.cpp:
        * TAO_IDL/be/be_visitor_sequence/sequence_cs.cpp:

          Changed internal checks and generated guards to handle
          use case of generating explicit template instantiation
          for bounded sequence base classes, and to avoid duplication
          if the same element type appears in a sequence with the
          same bound but in a different scope.

        * TAO_IDL/be/be_visitor_typedef.cpp:
        * TAO_IDL/be/be_visitor_typedef/typedef_ch.cpp:
        * TAO_IDL/be_include/be_visitor_typedef/typedef_ch.h:

          Fixed code generation for interface and valuetype typdefs